<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.skripsi.innasya.optscan.Activity.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_menu_info_black"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.skripsi.innasya.optscan.Activity.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_menu_notifications_black"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.skripsi.innasya.optscan.Activity.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_menu_sync_black"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
