<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.skripsi.innasya.optscan.Activity.ActivityResult">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:id="@+id/foto_informasi" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="bottom"
        android:background="@color/transparent_white"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="25dp"
            android:orientation="vertical" >

            <TextView
                android:text="@string/contoh_nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="7pt"
                android:textStyle="bold"
                android:layout_gravity="right"
                android:id="@+id/namaOPT" />

            <TextView
                android:text="@string/contoh_pola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="6pt"
                android:layout_marginBottom="4dp"
                android:layout_gravity="right"
                android:id="@+id/nama_latin" />

            <TextView
                android:text="@string/contoh_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="4pt"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:textAlignment="textEnd"
                android:id="@+id/desc" />

        </LinearLayout>
    </ScrollView>



</FrameLayout>
