<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:id="@+id/imageView7" />

    <ImageView
        android:layout_width="296dp"
        android:layout_height="225dp"
        android:src="@drawable/icon_white"
        android:layout_gravity="center"
        android:layout_weight="0.76"
        android:id="@+id/imageView5" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="0.09"
        android:layout_gravity="bottom">

        <ImageView
            android:src="@drawable/uin_white"
            android:layout_margin="5dp"
            android:id="@+id/imageView2"
            android:layout_width="67dp"
            android:layout_height="100dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="56dp">

            <ImageView
                android:layout_width="40dp"
                android:src="@drawable/kemen_white"
                android:id="@+id/imageView4"
                android:layout_margin="5dp"
                android:layout_height="40dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_margin="5dp"
                android:src="@drawable/balitsa_white"
                android:id="@+id/imageView3"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.33">

            <TextView
                android:text="@string/balista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"
                android:textColor="@android:color/white"
                android:layout_marginBottom="7dp"
                android:id="@+id/textView3" />

            <TextView
                android:text="@string/balista_desc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="4pt"
                android:textColor="@android:color/white"
                android:id="@+id/textView4" />

            <TextView
                android:text="@string/balista_desc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="4pt"
                android:textColor="@android:color/white"
                android:id="@+id/textView5" />

            <TextView
                android:text="@string/balista_desc3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="4pt"
                android:id="@+id/textView6" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>